--- a/codebase.css
+++ b/codebase.css
@@ -2,6 +2,43 @@
     margin: 0;
     padding: 0;
 }
+.imagenri img{
+    width: 194px;
+}
+.toper{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 30px;
+}
+.home ul{
+    display: flex;
+}
+.home ul li{
+    list-style: none;
+}
+.home ul a{
+    text-decoration: none;
+    padding-right: 50px;
+    font-size: 20px;
+    color: #2b2a2f;
+}
+.home{
+    display: flex;
+}
+.space a{
+    background-color: #471aff;
+        color: white;
+        text-decoration: none;
+        border: 0;
+        font-size: 22px;
+        cursor: pointer;
+        font-weight: bold;
+        margin-top: 20px;
+        border-radius: 5px;
+        text-align: center;
+        padding: 8px;
+}
+
 .mainbox{
     display: flex;
     align-items: center;
